Fixed zoom issue on mobile by setting 16px to input

--- a/src/app/components/ui-kit/input/input.css
+++ b/src/app/components/ui-kit/input/input.css
@@ -62,7 +62,7 @@
     padding: 0 12px;
     box-sizing: border-box;
     color: var(--input-text-color);
-    font-size: 14px;
+    font-size: 16px;
     font-family: inherit;
 
     &_right-padding {
